--- a/package.json
+++ b/package.json
@@ -10,11 +10,5 @@
     "lint": "npm run lint --prefix frontend"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0"
-  }
+  "license": "ISC"
 }
